# ml-messenger

./: .gitignore  .gitmodules  Readme.md  dune-project  index.html  ml-messenger.opam
codegen/: dune  messenger_codegen.ml
docs/: main.typ
lib/: audio.ml  audio_base.ml  base.ml  base.mli  camera.ml  component.ml  dune  general_model.ml  generalmodel.ml  generalmodel.mli  global_component.ml  internal.ml  loader.ml  model.ml  raw_scene.ml  recursion.ml  recursion.mli  render_texture.ml  resources.ml  scene.ml  ui.ml  ui.mli  vsr.ml
lib/extra/: asset_loading.ml  composite_component.ml  dune  fps.ml  init_update_component.ml  key_code.ml  layer_extra.ml  portable_component.ml  rng.ml  transition_base.ml  transition_model.ml  transition_transitions.ml
lib/regl/: dune
ppx/: dune  ppx_messenger_components.ml
test/: dune  test.ml  test_portable_component.ml  test_recursion.ml
test/messenger_test/: app.ml  dune  global_components.ml  main.ml  main_config.ml  main_desktop.ml  project.toml
test/messenger_test/assets/data/: texts.json
test/messenger_test/assets/fonts/: FiraCode-Regular.json
test/messenger_test/lib/: base.ml  resources.ml  user_data.ml
test/messenger_test/pcomp/badge/: model.ml
test/messenger_test/scenes/: all_scenes.ml
test/messenger_test/scenes/audio/: config.toml  model.ml
test/messenger_test/scenes/camera/: config.toml  model.ml
test/messenger_test/scenes/components/: config.toml  model.ml  scene_base.ml
test/messenger_test/scenes/components/a/: model.ml
test/messenger_test/scenes/components/b/: model.ml
test/messenger_test/scenes/components/components/: component_base.ml
test/messenger_test/scenes/components/components/rect/: init.ml  model.ml  msg.ml
test/messenger_test/scenes/config_data/: config.toml  model.ml
test/messenger_test/scenes/home/: config.toml  model.ml
test/messenger_test/scenes/interaction/: config.toml  model.ml  scene_base.ml
test/messenger_test/scenes/interaction/components/: component_base.ml
test/messenger_test/scenes/interaction/components/button/: init.ml  model.ml  msg.ml
test/messenger_test/scenes/interaction/components/slider/: init.ml  model.ml  msg.ml
test/messenger_test/scenes/portable_components/: component_base.ml  config.toml  model.ml  panel_msg.ml
test/messenger_test/scenes/portable_components/components/panel/: model.ml
test/messenger_test/scenes/sprite_sheet/: config.toml  model.ml
test/messenger_test/scenes/stress/: config.toml  model.ml
test/messenger_test/scenes/transition/: config.toml  model.ml
