(executable
 (name test)
 (libraries js_of_ocaml regl_js ml-messenger)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A)))

(executable
 (name test_desktop)
 (modules test_desktop)
 (libraries regl_desktop ml-messenger)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_desktop.ml)
 (deps test.ml)
 (action
  (copy %{deps} %{target})))

(test
 (name test_recursion)
 (libraries js_of_ocaml regl_js ml-messenger)
 (flags
  (:standard -warn-error -A)))

(test
 (name test_portable_component)
 (libraries js_of_ocaml regl_js ml-messenger messenger_extra)
 (flags
  (:standard -warn-error -A)))
