(include_subdirs qualified)

(library
 (name messenger_test_lib)
 (modules
  (:standard \ main main_desktop))
 (libraries ml-messenger messenger_extra)
 (preprocess
  (pps ml-messenger.ppx_messenger_components))
 (flags
  (:standard -warn-error -A)))

(executable
 (name main)
 (modules main)
 (libraries js_of_ocaml regl_js ml-messenger messenger_extra messenger_test_lib)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A)))

(executable
 (name main_desktop)
 (modules main_desktop)
 (libraries regl_desktop ml-messenger messenger_extra messenger_test_lib)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))
